# python-procrunner

./: .azure-pipelines.yml  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .pyup.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  appveyor.yml  pytest.ini  requirements_33.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: codeql.yml
docs/: .gitignore  Makefile  api.rst  conf.py  index.rst  installation.rst  make.bat  usage.rst
procrunner/: __init__.py
src/procrunner/: __init__.py
tests/: test_procrunner.py  test_procrunner_resolution.py  test_procrunner_system.py
