[metadata]
project-urls =
    Documentation = https://procrunner.readthedocs.io/
    GitHub = https://github.com/DiamondLightSource/python-procrunner
    Bug-Tracker = https://github.com/DiamondLightSource/python-procrunner/issues

[flake8]
exclude = docs

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

