[metadata]
name = procrunner
description = Versatile utility function to run external processes
version = 2.3.3
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
license = BSD
license_file = LICENSE
project-urls =
    Download = https://github.com/DiamondLightSource/python-procrunner/tags
    Documentation = https://procrunner.readthedocs.io/
    GitHub = https://github.com/DiamondLightSource/python-procrunner
    Bug-Tracker = https://github.com/DiamondLightSource/python-procrunner/issues

[flake8]
# Black disagrees with flake8 on a few points. Ignore those.
ignore = E203, E266, E501, W503
# E203 whitespace before ':'
# E266 too many leading '#' for block comment
# E501 line too long
# W503 line break before binary operator

max-line-length = 88

select =
    E401,E711,E712,E713,E714,E721,E722,E901,
    F401,F402,F403,F405,F541,F631,F632,F633,F811,F812,F821,F822,F841,F901,
    W191,W291,W292,W293,W602,W603,W604,W605,W606,
    # flake8-comprehensions, https://github.com/adamchainz/flake8-comprehensions
    C4,

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

